2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/24_print_cast.deca
// Description:
//    Programme utilisant le casting.
//
// Resultats:
//    affiche 2 en tant que int
//
// Historique:
//    cree le 20/12/2023
{
    print((int)(2.0));
}