2A/05_Projet_GL/src/test/deca/syntax/invalid/HelloWorld/06_sans_point_virgule.deca
// Description:
//    Programme sans ; en fin de ligne.
//
// Resultats:
//    Erreur syntaxique : 12:0: missing ';' juste après print("HelloWorld")
//
// Historique:
//    cree le 20/12/2023

{
    print("HelloWorld")
}